firebaseでgemini APIを呼び出してスコア計算

--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "expo": "~54.0.27",
     "expo-camera": "~17.0.10",
+    "expo-constants": "^18.0.13",
+    "expo-file-system": "~18.0.10",
     "expo-image-picker": "~17.0.9",
     "expo-status-bar": "~3.0.9",
     "react": "19.1.0",
