--- a/app.json
+++ b/app.json
@@ -26,6 +26,9 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
+    },
+    "extra": {
+      "SCORE_API_URL": "http://192.168.11.3:5001/platescore-44967/us-central1"
     }
   }
 }
