--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.1.2",
     "expo": "~54.0.27",
     "expo-camera": "~17.0.10",
     "expo-constants": "^18.0.13",
